--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -13,6 +13,5 @@
 }
 
 p{
-	text-align: justify;
 	line-height: $font-size * $font-scale;
 }
