--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,4 +1,4 @@
-$body-bg: #eee;
+$body-bg: #fff;
 $body-color: #555;
 $hr: lighten($body-color, 50%);
 $header-color: $body-bg;
